# mediastudyshelf

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-publish.yaml  dockerhub-description.yaml  dockerhub_description.yaml  image_ci.yaml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  main.jsx  styles.css
client/src/components/: AssetRail.jsx  AudioStreamPlayer.jsx  CourseNav.jsx  CoursesPage.jsx  FooterNav.jsx  LessonHeader.jsx  PdfPane.jsx  SplitDivider.jsx  VideoPane.jsx
client/src/lib/: api.js
docker/: Dockerfile  docker-compose.yaml
docs/: DOCKERHUB.md
src/mediastudyshelf/: config.py  hls.py  main.py  models.py  routes.py  walker.py  watcher.py
src/mediastudyshelf/api/: __init__.py  class_view.py  state.py  stream.py  tree.py
src/mediastudyshelf/api/types/: __init__.py  class_view.py  stream.py  tree.py
src/mediastudyshelf/content/: walker.py  watcher.py
src/mediastudyshelf/core/: state.py
src/mediastudyshelf/core/content/: probe.py  walker.py  watcher.py
src/mediastudyshelf/core/stream/: __init__.py  constants.py  encoders.py  playlist.py  probe.py  session.py  session_manager.py
src/mediastudyshelf/core/types/: __init__.py  content.py
src/mediastudyshelf/streaming/: __init__.py  encoders.py  hls.py  media.py  playlist.py  session.py  session_manager.py
src/mediastudyshelf_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_class.py  test_media.py  test_tree.py  test_watcher.py
(+1 files in other folders)
