[project]
name = "mediastudyshelf-server"
version = "0.1.0"
description = "Local-first course player for video, PDF, and audio lessons"
readme = "docs/SPEC.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pypdf>=4.0",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.3",
]

[project.scripts]
mediastudyshelf-walker = "mediastudyshelf.walker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
